--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
     <h2>Getting Involved</h2>
 
-    <p>We are always looking for more altruistic, ambitious people to be part of our community. 
+    <p>We are always excited to meet more altruistic, ambitious people who want to be part of our community. 
         There are lots of ways to be involved: you can live here, you can organize events, you can execute on altruistic projects, 
         you can nurture the community, or you can even just hang out and be our friend!
     </p>
