--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Workshop House DC</title>
-<link rel="stylesheet" href="simple-v1.css">
+<link rel="stylesheet" href="simple.css">
 
 <style>
     .image-row {
@@ -33,7 +33,7 @@
 <header>
     <img class="logo" src="images/wh.png">
     <h1>Welcome to Workshop House</h1>
-    <p>We're nurturing a community of altruistic, ambitious people in DC.</p>
+    <p>We're nurturing a community of altruistic ambitious people in DC.</p>
 </header>
 <main>
 
@@ -87,6 +87,46 @@
         level of alignment with the mission of the house, and any disruption that will affect the residents. Events
         are subject to approval by house residents.
     </p>
+
+    <p>We have a chat server (at <a href="https://chat.workshop.house">chat.workshop.house</a>); if you are regularly around 
+        the house or are organizing events, bug someone for an invite.</p>
+
+    <!-- Begin Mailchimp Signup Form -->
+    <div class="notice">
+        <p>If you want to stay informed about happenings at Workshop, join our newsletter:</p>
+
+
+<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+<div id="mc_embed_signup">
+    <form action="https://house.us14.list-manage.com/subscribe/post?u=ba11e24151daf7fdd67665c47&amp;id=1f323492d1&amp;f_id=00cea6e0f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+	<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">Name </label>
+	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+	<span id="mce-FNAME-HELPERTEXT" class="helper_text"></span>
+</div>
+	<div id="mce-responses" class="clear foot">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ba11e24151daf7fdd67665c47_1f323492d1" tabindex="-1" value=""></div>
+        <div class="optionalParent">
+            <div class="clear foot">
+                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+            </div>
+        </div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+    </div>
 
     <h2>Life at the Workshop</h2>
     <p>Workshop House can be an intense place to stay or live. There's a lot going on, and life here subjects you to all of it, 
