--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <img src="images/party2.jpg">
     </div>
     </div>
+
+    <p>We are located in Washington DC, near Logan Circle, about a mile north of the White House.</p>
     
     <p>Workshop House is a historic building: it was once a rectory (a place where priests live). It has a giant
         cross on the roof. We aren't particularly religious ourselves, but we do appreciate the history of the place.
