update resident count

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <main>
 
     <h2>About</h2>
-    <p>Workshop House is, first and foremost, a house. We have 8 bedrooms and 5 permanent residents. 
+    <p>Workshop House is, first and foremost, a house. We have 8 permanent residents and a bit of extra space for guests.
     </p>
 
     <p>Our space is big enough to host events and parties, and so we also choose to run events focused around growing this 
