--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <p>Our space is big enough to host events and parties, and so we also choose to run events focused around growing this 
         community that we're all participating in. We have a lovely rooftop, as well as a sizeable main room 
-        and industrial kitchen. We've hosted afterparties, launch parties, as well as a professional mentorship event 
+        and nice kitchen. We've hosted afterparties, launch parties, as well as a professional mentorship event 
         and other networking events. 
     </p>
 
@@ -137,12 +137,12 @@
         to refer a guest.
     </p>
 
-    <p>We are also accepting applications for potential residents. Living here costs upwards of $1800 per room per month. 
+    <p>Our bedrooms are all occupied, but we still accept applications for potential residents for future spots that might open up. Living here costs upwards of $1800 per room per month. 
         We're looking for residents who are committed to the mission of the house, and who are excited to be part of the
         social fabric (e.g. show up for events and welcome guests, run events of your own, join for community dinners, 
         etc). If this sounds like you, 
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIGqa7KAmkSStp74Ma0CzBPsG5fVeAFA2oD6YAgq5Pf0TaBQ/viewform">fill out 
-            this form</a> and we'll be in touch, although responding to such inquiries usually takes a week or two.</p>
+            this form</a> and we'll be in touch, although responding to such inquiries may take a while.</p>
     
 </main>
 
