--- a/newsletter/2024-12.html
+++ b/newsletter/2024-12.html
@@ -56,7 +56,7 @@ Dec 12&mdash;Preserving Democracy discussion, a crossover event with iCivics and
 Dec 21&mdash;Secular Solstice ceremony: Secular Solstice is a new humanist tradition. Every year on the darkest day we gather together to sing songs and tell stories about human history, civilization, death, suffering, and creating a better future. RSVP here: <a href="https://partiful.com/e/ynC91IJKRHAS11CM1eiE">https://partiful.com/e/ynC91IJKRHAS11CM1eiE</a>
 </li>
 <li>
-Veganuary Potluck + Bash: In early January, perhaps Jan 10 but still TBA, we are hosting a Veganuary potluck and house party after. Stay tuned here: <a href="https://partiful.com/e/H2Yc7Hmz7Y0p6Pj4lFDM">https://partiful.com/e/H2Yc7Hmz7Y0p6Pj4lFDM</a>
+Jan 11&mdash;Veganuary Potluck + Bash: Vegan potluck and house party after. Stay tuned here: <a href="https://partiful.com/e/H2Yc7Hmz7Y0p6Pj4lFDM">https://partiful.com/e/H2Yc7Hmz7Y0p6Pj4lFDM</a>
 </li>
 </ul>
 
