--- a/newsletter/2024-12.html
+++ b/newsletter/2024-12.html
@@ -120,6 +120,10 @@ you would like to be involved.
 
 <p>Or, if you have other ideas, speak to Lincoln and we'll discuss!</p>
 
+<p>Besh wishes and happy holidays,<br>
+&mdash;Lincoln Quirk
+</p>
+
 </main>
 
 <footer>
